[gd_scene load_steps=4 format=3 uid="uid://cpi1pjlruh518"]

[ext_resource type="Script" path="res://scenes/components/shop_enemy_component/shop_enemy_component.gd" id="1_n8vak"]
[ext_resource type="Texture2D" uid="uid://dd4l3c87gndlk" path="res://icon.svg" id="2_3eop7"]
[ext_resource type="Resource" uid="uid://cctnpuu0n3yxd" path="res://Enemys/Zombie/zombie.tres" id="2_vx7vq"]

[node name="ShopEnemyComponent" type="Control"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n8vak")
enemy_definition = ExtResource("2_vx7vq")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.172549, 0.172549, 0.172549, 1)

[node name="EnemyIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3eop7")
expand_mode = 1
stretch_mode = 5

[node name="CountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 18.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 16
text = "x3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
